samples/_failures_safe/1761450394_dfb5f5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_79254b6a.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_79254b6a.c:190:30: error: expected ‘;’ at end of input
  190 |     for (int i = 0; i < graph
      |                              ^
      |                              ;
./samples/SAFE/__tmp_79254b6a.c:190:5: error: expected declaration or statement at end of input
  190 |     for (int i = 0; i < graph
      |     ^~~
